--- a/gui/style/actions.css
+++ b/gui/style/actions.css
@@ -13,6 +13,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    z-index: 1;
 }
 
 /**
@@ -21,13 +22,24 @@
 
 .action.full {
     height: 55px;
+    position: relative;
     overflow: hidden;
     border-radius: 13px;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
 }
 
+.action.full .progressbar {
+    width: 0%;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    display: block;
+    background-color: rgba(22, 207, 6, 0.2);
+}
+
 .action.full .title {
     font-size: 1.2rem;
+    z-index: 1;
     font-weight: 400;
 }
 
