--- a/gui/style/actions.css
+++ b/gui/style/actions.css
@@ -126,6 +126,10 @@ Action Normal
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.05);
 }
 
+.action.normal.progress {
+    background-color: rgb(212, 245, 208);
+}
+
 .action.normal .title {
     font-weight: 500;
     font-size: 14px;
