--- a/gui/style/actions.css
+++ b/gui/style/actions.css
@@ -16,6 +16,15 @@
     z-index: 1;
 }
 
+.action .progressbar {
+    width: 0%;
+    position: absolute;
+    left: 0;
+    height: 100%;
+    display: block;
+    background-color: rgba(22, 207, 6, 0.2);
+}
+
 /**
 * Action Full
 */
@@ -26,15 +35,6 @@
     overflow: hidden;
     border-radius: 13px;
     box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.05);
-}
-
-.action.full .progressbar {
-    width: 0%;
-    position: absolute;
-    left: 0;
-    height: 100%;
-    display: block;
-    background-color: rgba(22, 207, 6, 0.2);
 }
 
 .action.full .title {
@@ -123,15 +123,17 @@ Action Normal
 
 .action.normal {
     height: 36px;
+    position: relative;
     box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.05);
 }
 
 .action.normal.progress {
-    background-color: rgb(212, 245, 208);
+    overflow: hidden;
 }
 
 .action.normal .title {
     font-weight: 500;
+    z-index: 1;
     font-size: 14px;
 }
 
@@ -140,6 +142,7 @@ Action Normal
     margin: 6px;
     width: 24px;
     height: 24px;
+    z-index: 1;
     font-size: 17.78px;
 }
 
