--- a/gui/style/sidepanel.css
+++ b/gui/style/sidepanel.css
@@ -24,6 +24,7 @@ html {
 .container {
     min-height: calc(100vh - 55px - 30px);
     overflow: hidden;
+    align-items: flex-start;
 }
 
 :not(.main).action-icon:active, .new-tab:active {
@@ -49,6 +50,14 @@ html {
     padding: 0 5px;
     font-size: 11px;
     font-weight: 500;
+}
+
+.sidepanel .icons {
+    user-select: none;
+}
+
+.sidepanel .icons .webgen-icon {
+    cursor: pointer;
 }
 
 @media (max-width: 900px) {
